--- a/registro.html
+++ b/registro.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="contenedor">
-    <h1>Registro de Usuario</h1>
+    <h4 style="font-size: 32px;">Registro de Usuario</h4>
 
     <form id="formularioRegistro">
         <label>Nombre completo:</label>
